# resources

./: .gitignore  Design.md  Implementierungen.md  Ratsinformationssysteme in Deutschland.md  check_endpoints.py  count_attributes.py  endpoints.list  endpoints.yml  liboparldemo.java  oparl_1-1_openapi.yaml  oparl_cache.py  protokolle.py  pyproject.toml  sort_endpoints.py  stats.py  update_endpoints_db.py  validate.py
